@@ -20,37 +20,25 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Configuration class for Spring Security.
- */
 @Configuration
 @EnableMethodSecurity
 public class WebSecurityConfig {
+
     @Autowired
     UserDetailsServiceImpl userDetailsService;
 
     @Autowired
     private AuthEntryPointJwt unauthorizedHandler;
 
-    /**
-     * Creates a JWT authentication filter bean.
-     *
-     * @return The JWT authentication filter
-     */
     @Bean
     public AuthTokenFilter authenticationJwtTokenFilter() {
         return new AuthTokenFilter();
     }
 
-    /**
-     * Creates a DAO authentication provider bean.
-     *
-     * @return The DAO authentication provider
-     */
+
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
@@ -61,35 +49,16 @@ public class WebSecurityConfig {
         return authProvider;
     }
 
-    /**
-     * Creates an authentication manager bean.
-     *
-     * @param authConfig The authentication configuration
-     * @return The authentication manager
-     * @throws Exception If an error occurs
-     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
-    /**
-     * Creates a password encoder bean.
-     *
-     * @return The password encoder
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Configures the security filter chain.
-     *
-     * @param http The HTTP security
-     * @return The security filter chain
-     * @throws Exception If an error occurs
-     */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
@@ -113,16 +82,14 @@ public class WebSecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Allow specific origins for security. Avoid "*" in production unless absolutely necessary.
-        // Replace with your frontend's actual URL (e.g., "http://localhost:3000", "http://your-frontend-domain.com")
         configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://127.0.0.1:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")); // Include OPTIONS
-        configuration.setAllowedHeaders(List.of("*")); // Allow all headers (including Authorization, Content-Type etc.)
-        configuration.setAllowCredentials(true); // Allow credentials (like cookies, authorization headers)
-        configuration.setMaxAge(3600L); // How long the preflight response can be cached (in seconds)
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Apply this CORS config to all paths
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
